# anything-to-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CRUSH.md  MARKITDOWN_COMPARISON_REPORT.md  MARKITDOWN_ENHANCEMENTS.md  README.md  TEST_REPORT.md  check_file_lengths.py  main.py  pyproject.toml  pyproject.toml.backup  requirements.txt  setup.py  test_article.txt
.claude/commands/: constitution.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
anyfile_to_ai/: __init__.py
anyfile_to_ai/audio_processor/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  markdown_formatter.py  metadata.py  model_loader.py  models.py  processor.py  progress.py  streaming.py
anyfile_to_ai/image_processor/: README.md  __init__.py  __main__.py  cli.py  config.py  enhanced_result.py  exceptions.py  markdown_formatter.py  metadata.py  model_loader.py  model_registry.py  models.py  processor.py  progress.py  streaming.py  vlm_config.py  vlm_exceptions.py  vlm_model_impl.py  vlm_models.py  vlm_processor.py
anyfile_to_ai/llm_client/: __init__.py  cache.py  client.py  config.py  exceptions.py  models.py  retry.py
anyfile_to_ai/pdf_extractor/: README.md  __init__.py  __main__.py  circuit_breaker.py  cli.py  enhanced_models.py  exceptions.py  image_adapter.py  image_extractor.py  image_integration.py  markdown_formatter.py  metadata.py  models.py  output_formatters.py  reader.py  streaming.py
anyfile_to_ai/progress_tracker/: README.md  __init__.py  cli_renderer.py  consumers.py  emitter.py  models.py
anyfile_to_ai/test_quality/: __init__.py
anyfile_to_ai/text_summarizer/: README.md  __init__.py  __main__.py  chunker.py  exceptions.py  llm_adapter.py  markdown_formatter.py  metadata.py  models.py  processor.py  progress.py
audio_processor/: README.md  __init__.py  __main__.py  cli.py  config.py  exceptions.py  markdown_formatter.py  model_loader.py  models.py  processor.py  progress.py  streaming.py
image_processor/: README.md  __init__.py  __main__.py  cli.py  exceptions.py  model_loader.py  models.py  processor.py  progress.py  streaming.py  vlm_model_impl.py  vlm_models.py
llm_client/: README.md  __init__.py  client.py  config.py  exceptions.py  models.py
llm_client/adapters/: __init__.py  base.py  lmstudio_adapter.py  mlx_adapter.py  ollama_adapter.py
pdf_extractor/: README.md  __init__.py  __main__.py  cli.py  exceptions.py  image_adapter.py  image_extractor.py  markdown_formatter.py  output_formatters.py  progress.py  reader.py  streaming.py
progress_tracker/: __init__.py  consumers.py  models.py
specs/001-a-simple-python/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-implement-a-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-real-vlm-insegration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-proper-documentation-for/: plan.md  spec.md
specs/005-augment-pdf-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-audio-to-text/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-add-linting-and/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-utility-module-to/: HANDOFF.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-summarizer-module-this/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-unify-progress-bars/: HANDOFF.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-mkdn-markdown-output/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-prepare-this-repository/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-test-cleanup-and/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-timestamp-support-for/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-extend-all-result/: HANDOFF.md  IMPLEMENTATION_STATUS.md  PROGRESS_SUMMARY.md  QUICK_REFERENCE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: README.md  conftest.py  human_review_quick_test
tests/contract/: test_adapter_interface.py  test_api.py  test_api_config.py  test_api_formats.py  test_api_info.py  test_api_process_image.py  test_api_process_images.py  test_api_streaming.py  test_api_validate_image.py  test_audio_cli_parser.py  test_audio_exceptions.py  test_audio_markdown.py  test_audio_metadata_contract.py  test_audio_models.py  test_audio_module_api.py  test_cli_interface.py  test_cli_interface_enhanced.py  test_cli_main.py  test_cli_output.py  test_cli_parser.py  test_config_interface.py  test_coverage_config.py  test_coverage_measure.py  test_coverage_modules_get.py  test_enhanced_api.py  test_entry_points.py  test_error_messages.py  test_exceptions.py  test_exceptions_enhanced.py  test_hook_bypass.py  test_image_markdown.py  test_image_metadata_contract.py  test_llm_client_api.py  test_metadata_schema.py  test_module_api.py  test_optional_dependencies.py  test_package_metadata.py  test_pdf_markdown.py  test_pdf_metadata_contract.py  test_precommit_config.py  (+14 more)
tests/integration/: test_audio_error_workflows.py  test_audio_markdown_integration.py  test_audio_metadata_integration.py  test_audio_summary_pipeline.py  test_backward_compat.py  test_backward_compat_metadata.py  test_backward_compatibility.py  test_basic_vlm.py  test_batch_audio_processing.py  test_batch_cleanup.py  test_batch_processing.py  test_caching_behavior.py  test_cleanup_workflow.py  test_cli.py  test_cli_installation.py  test_cli_progress.py  test_cli_scenarios.py  (+32 more)
text_summarizer/: README.md  __main__.py  chunker.py  exceptions.py  llm_adapter.py  markdown_formatter.py  processor.py  progress.py  prompt_template.txt
tmp/: audio_test.json  audio_test.md  audio_timestamps.json  audio_timestamps.md  audio_timestamps.txt  image_test.json  image_test.txt  pdf_content.txt  summary_test.json
(+78 files in other folders)
