[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anyfile_to_ai"
version = "0.1.0"
description = "Universal file processor with AI-powered text extraction, image analysis, audio transcription, and text summarization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AnyFile to AI Contributors"}
]
keywords = ["pdf", "image", "audio", "text", "ai", "extraction", "transcription", "summarization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "alive-progress>=3.0.0",
    "build>=1.3.0",
    "httpx>=0.27.0",
    "torchvision>=0.23.0",
    "twine>=6.2.0",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.11.7",
]
image = [
    "mlx-vlm>=0.3.3",
    "pillow>=11.3.0",
    "torchvision>=0.15.0",
]
audio = [
    "lightning-whisper-mlx>=0.0.10",
]
text = [
    "httpx>=0.27.0",
]
all = [
    "pdfplumber>=0.11.7",
    "mlx-vlm>=0.3.3",
    "pillow>=11.3.0",
    "torchvision>=0.15.0",
    "lightning-whisper-mlx>=0.0.10",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-rerunfailures>=14.0",
    "pre-commit>=4.0.0",
    "ruff>=0.13.2",
    "setuptools>=61.0",
    "wheel",
    "build",
    "twine",
]

[project.scripts]
pdf-extractor = "anyfile_to_ai.pdf_extractor.__main__:main"
image-processor = "anyfile_to_ai.image_processor.__main__:main"
audio-processor = "anyfile_to_ai.audio_processor.__main__:main"
text-summarizer = "anyfile_to_ai.text_summarizer.__main__:main"

[project.urls]
Repository = "https://github.com/yourusername/anything-to-ai"
Documentation = "https://github.com/yourusername/anything-to-ai#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--cov=anyfile_to_ai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "--reruns=3",
    "--reruns-delay=1",
]
markers = [
    "flaky: marks tests as flaky and should be quarantined",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
    "contract: marks tests as contract tests",
]

[tool.ruff]
line-length = 250

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C901", # too complex (McCabe complexity)
    "C",   # mccabe complexity
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # numpy
    "RUF", # ruff-specific rules
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
    "TRY003", # raise specific exception
    "PLC0415", # import should be at top-level (allow conditional imports)
    "PTH119", # os.path.basename -> Path.name (preserve compatibility)
    "PTH123", # open() -> Path.open() (preserve compatibility)
    "PTH110", # os.path.exists -> Path.exists() (preserve compatibility)
    "PTH113", # os.path.isfile -> Path.is_file() (preserve compatibility)
    "PTH202", # os.path.getsize -> Path.stat().st_size (preserve compatibility)
    "PTH118", # os.path.join -> Path / (preserve compatibility)
    "PTH108", # os.unlink -> Path.unlink() (preserve compatibility)
    "PTH106", # os.rmdir -> Path.rmdir() (preserve compatibility)
    "ARG001", # unused function argument (false positives in test mocks/callbacks)
    "ARG002", # unused method argument (false positives in test mocks/callbacks)
    "ARG005", # unused lambda argument (false positives in test mocks/callbacks)
    "T201",   # print found (used intentionally in CLI)
    "EM101",  # exception string literals (common pattern)
    "TRY300", # return in try block (acceptable pattern)
    "B904",   # raise from err (not always necessary)
    "SIM105", # contextlib.suppress (less readable)
    "B007",   # loop variable not used (acceptable in iteration)
    "DTZ005", # datetime.now() without tz (not needed for logging/testing)
    "ERA001", # commented-out code (explanatory comments are useful)
    "F401",   # imported but unused (used for type checking)
    "F821",   # undefined name (false positives with TYPE_CHECKING)
    "INP001", # __init__.py missing (not always needed)
    "PT011",  # pytest.raises too broad (acceptable in tests)
    "PT017",  # pytest.raises assert message (not always needed)
    "A004",   # builtin shadowing (acceptable in limited scope)
    "TRY301", # raise in function (refactoring not always beneficial)
    "SIM117", # multiple with statements (less readable when separated)
    "TRY004", # prefer TypeError (ValueError is often more appropriate)
    "PLW0603", # global statement (acceptable for singleton patterns)
    "PTH207", # glob -> Path.glob() (preserve compatibility)
    "PTH122", # os.path.splitext -> Path.suffix (preserve compatibility)
    "PTH120", # os.path.dirname -> Path.parent (preserve compatibility)
    "PTH112", # os.path.isdir -> Path.is_dir() (preserve compatibility)
    "N806",   # variable in function should be lowercase (acceptable for constants)
    "G004",   # logging f-string (acceptable pattern)
    "E721",   # type comparison with == (acceptable in specific cases)
    "UP035",  # deprecated import (compatibility with older Python)
    "TRY401", # redundant exception in logging (acceptable pattern)
    "TRY002", # raise vanilla Exception (sometimes appropriate)
    "TRY203", # use raise from (not always applicable)
    "C901",   # too complex (acceptable for main functions)
    "B017",   # assertRaises(Exception) (acceptable in tests)
    "ARG004", # unused static method argument (false positives)
    "A002",   # argument shadows builtin (acceptable in limited scope)
    "A001",   # variable shadows builtin (acceptable in limited scope)
    "SIM115", # open file with context handler (not always needed)
    "SIM113", # enumerate instead of manual counter (less readable sometimes)
    "SIM102", # use a single if instead of nested (less readable sometimes)
    "RUF043", # dataclass field with default_factory (false positives)
    "RUF012", # mutable class attribute (acceptable pattern)
    "PT018",  # composite assertion (more readable as separate asserts)
    "PT012",  # pytest.raises should contain a simple statement (acceptable)
    "PLW2901", # redefining loop variable (acceptable pattern)
    "PLR0206", # property with parameters (false positives)
    "N818",   # exception name should end in Error (acceptable variations)
    "G201",   # logging .exception (acceptable pattern)
    "B024",   # abstract base class without abstract methods (acceptable)
    "B023",   # function uses loop variable (false positives)
    "COM812", # trailing comma (conflicts with formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-public-methods = 20

[tool.ruff.lint.pycodestyle]
max-line-length = 250

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["anyfile_to_ai"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "*/.venv/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools.package-data]
anyfile_to_ai = ["**/*.txt", "**/*.md"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
